--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3549,7 +3549,8 @@ body.single #wrapper {
 	margin: 0 0 1em 0;
 	overflow: hidden;
 	position: relative;
-	width: 4em;
+	width: 19em;
+	height: 19em;
 
 }
 
@@ -3570,7 +3571,7 @@ body.single #wrapper {
 #intro .logo img {
 	display: block;
 	margin-left: -0.25em;
-	width: 4.5em;
+	width: 19em;
 
 }
 
